--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">WIE ben ik</a>
+                        <a class="page-scroll" href="#services">WIE</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">WAAROM doe ik dit</a>
+                        <a class="page-scroll" href="#portfolio">WAAROM</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">WAT kan ik voor u betekenen</a>
+                        <a class="page-scroll" href="#about">WAT</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">HOE gaan we samen van start</a>
+                        <a class="page-scroll" href="#team">HOE</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">CONTACT wanneer maken we kennis met elkaar</a>
+                        <a class="page-scroll" href="#contact">CONTACT</a>
                     </li>
                 </ul>
             </div>
