--- a/index.html
+++ b/index.html
@@ -88,51 +88,37 @@
         </div>
     </header>
 
-    <!-- Services Section -->
-    <section id="services">
+    <!-- Wie ben ik Section -->
+    <section id="wie">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Wie ben ik</h2>
                     <h3 class="section-subheading text-muted">Piet van der Werff</h3>
-                    <p>Piet van der Werff (1969) , heeft al ruim 40 jaar een enorme voorliefde voor de gastronomie.
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
+                    </div>
+                </div>
+                <div class="col-xs-8">
+                    <div class="team-member">
+                        <p>Piet van der Werff (1969) , heeft al ruim 40 jaar een enorme voorliefde voor de gastronomie.
                         Toen hij op zijn 6e zijn eerste slak at aan het Italiaanse Lago Maggiore,
                         ontwaakte zijn passie voor (slow) food. <br>
+                            <br>
                         Na 12 intensieve jaren in de horecasales bij Lindenhoff,
                         sloeg hij in 2014 een nieuwe weg in en deelt sindsdien met ongetemd enthousiasme zijn kennis en
                         ervaring met (horeca)ondernemers.
                         Hierbij stelt Piet zijn omvangrijke netwerk open voor een ieder die graag voorop wil lopen met
                         zijn of haar (horeca)bedrijf. <br>
+                            <br>
                         Naast de “eerste hulp voor horecaondernemers” houdt Piet zich bezig met het selecteren en leveren
                         van gastronomische producten uit Italië en Spanje.
-                    </p>
-                </div>
-            </div>
-            <div class="row text-center">
-                <p>Ik kan u adequaat van dienst zijn op de volgende gebieden</p>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Coaching</h4>
-                    <p class="text-muted">Ik help u inzicht te krijgen in uw persoonlijke keuzes.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Curing</h4>
-                    <p class="text-muted">We maken samen uw bedrijf gezond.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Conceptontwikkeling</h4>
-                    <p class="text-muted">Ik help u een uniek en onderscheidend bedrijf neer te zetten in de hospitalitybranche.</p>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
