--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">WIE</a>
+                        <a class="page-scroll" href="#wie">WIE</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">WAAROM</a>
@@ -83,7 +83,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Specialisten in professionalisering in de gastvrijheidsbranche</div>
                 <div class="intro-heading">Van der Werff Hospitality</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#wie" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
     </header>
